--- a/LiveMines_Report_Viewer.html
+++ b/LiveMines_Report_Viewer.html
@@ -40,7 +40,7 @@
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
             <h1 class="text-4xl font-bold text-slate-800">LiveMines 模擬報告分析器</h1>
-            <p class="text-sm text-slate-500 mt-2">開發者: Pascal | 日期: 2025-10-01</p>
+            <p class="text-sm text-slate-500 mt-2">開發者: Pascal(Trevi機率工程師) | 日期: 2025-10-01</p>
             <p class="text-slate-600 mt-2">點擊下方按鈕以選擇並分析 `multiplayer_simulation_report.txt` 檔案。</p>
         </header>
 
@@ -534,4 +534,5 @@
     </script>
 </body>
 </html>
+
 
